@@ -172,9 +172,17 @@ counter</p>
 <p>Default: 1</p>
 </dd>
 
-<dt>cg_tracers [0|1]</td>
+<dt>cg_tracers [0|1|2]</td>
 <dd>
-<p>Enables/disables drawing the bullet tracers.</p>
+<p>Enables/disables drawing the bullet tracers:</p>
+<dl>
+	<dt>0
+	<dd>No tracers.
+	<dt>1
+	<dd>All tracers.
+	<dt>2
+	<dd>All but your own tracers.
+</dl>
 <p>Default: 1</p>
 </dd>
 
