@@ -2133,7 +2133,10 @@ void ClientUserinfoChanged( int clientNum ) {
 		);
 	} else {
 #endif
-		s = va( "n\\%s\\t\\%i\\c\\%i\\r\\%i\\m\\%s\\s\\%s\\dn\\%s\\dr\\%i\\w\\%i\\lw\\%i\\sw\\%i\\mu\\%i\\ref\\%i\\uci\\%u\\lc\\%i", //mcwf GeoIP
+		// mcwf GeoIP
+		// quad: added support for latched classes
+		// foxX: added support for ready state
+		s = va( "n\\%s\\t\\%i\\c\\%i\\r\\%i\\m\\%s\\s\\%s\\dn\\%s\\dr\\%i\\w\\%i\\lw\\%i\\sw\\%i\\mu\\%i\\ref\\%i\\uci\\%u\\lc\\%i\\rd\\%i",
 			client->pers.netname, 
 			client->sess.sessionTeam, 
 			client->sess.playerType, 
@@ -2148,7 +2151,8 @@ void ClientUserinfoChanged( int clientNum ) {
 			(client->sess.auto_unmute_time != 0) ? 1 : 0,
 			client->sess.referee,
 			client->sess.uci, //mcwf GeoIP
-			client->sess.latchPlayerType
+			client->sess.latchPlayerType,
+			(client->ps.eFlags & EF_READY) ? 1 : 0
 		);
 #ifndef NO_BOT_SUPPORT
 	}
